<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.ak.aimlforandroid.UI.Classroom.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home">
        <argument android:name="classID"
            app:argType="string"/>
    </fragment>

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.ak.aimlforandroid.UI.Classroom.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" >
        <argument android:name="DashboardFragment"
            app:argType="string"/>
    </fragment>

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.ak.aimlforandroid.UI.Classroom.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications">
        <argument android:name="NotificationsFragment"
            app:argType="string"/>
    </fragment>
</navigation>