<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/layout_rounded">
    <LinearLayout
        android:id="@+id/attendance"
        android:padding="10sp"
        android:gravity="center_vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView
            android:src="@drawable/history"
            android:layout_width="50sp"
            android:layout_height="50sp"/>
        <TextView
            android:textColor="@color/black"
            android:textSize="18sp"
            android:layout_marginStart="20sp"
            android:text="@string/attendance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/att_his"
        android:padding="10sp"
        android:gravity="center_vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView
            android:src="@drawable/attendance"
            android:layout_width="50sp"
            android:layout_height="50sp"/>
        <TextView
            android:textColor="@color/black"
            android:textSize="18sp"
            android:layout_marginStart="20sp"
            android:text="@string/att_history"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/add_post"
        android:padding="10sp"
        android:gravity="center_vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView
            android:src="@drawable/add_post"
            android:layout_width="50sp"
            android:layout_height="50sp"/>
        <TextView
            android:textColor="@color/black"
            android:textSize="18sp"
            android:layout_marginStart="20sp"
            android:text="@string/add_post"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>

</LinearLayout>